[neutron] Add tempest feature for neutron.

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -524,64 +524,94 @@ spec:
 {{- if .Values.tempest.enabled }}
   
   - name: tempest
-    projects:
-    - name: neutron-tempest-admin
-      description: Neutron Tempest Admin Test Project 1
+    groups:
+    - name: administrators
+      description: 'Administrators'
+      users:
+      - neutron-tempestadmin1
+      - neutron-tempestadmin2
+      - neutron-tempestadmin3
+      - neutron-tempestadmin4
       roles:
-      - user: admin@Default
-        role: cloud_network_admin
+      - project: neutron-tempest-admin1
+        role: admin
+      - project: service
+        role: admin
+      - domain: tempest
+        role: admin
+      - domain: tempest
+        role: admin
+        inherited: true
+      - project: neutron-tempest-admin2
+        role: admin
+      - project: service
+        role: admin
+      - domain: tempest
+        role: admin
+      - domain: tempest
+        role: admin
+        inherited: true
+      - project: neutron-tempest-admin3
+        role: admin
+      - project: service
+        role: admin
+      - domain: tempest
+        role: admin
+      - domain: tempest
+        role: admin
+        inherited: true
+      - project: neutron-tempest-admin4
+        role: admin
+      - project: service
+        role: admin
+      - domain: tempest
+        role: admin
+      - domain: tempest
+        role: admin
+        inherited: true
+    projects:
+    - name: neutron-tempest-admin1
+      description: Neutron Tempest Admin Test Project 1
+    - name: neutron-tempest-admin2
+      description: Neutron Tempest Admin Test Project 2
+    - name: neutron-tempest-admin3
+      description: Neutron Tempest Admin Test Project 3
+    - name: neutron-tempest-admin4
+      description: Neutron Tempest Admin Test Project 4
     - name: neutron-tempest1
       description: Neutron Tempest Test Project 1
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest2
       description: Neutron Tempest Test Project 2
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest3
       description: Neutron Tempest Test Project 3
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest4
       description: Neutron Tempest Test Project 4
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest5
       description: Neutron Tempest Test Project 5
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest6
       description: Neutron Tempest Test Project 6
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest7
       description: Neutron Tempest Test Project 7
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
     - name: neutron-tempest8
       description: Neutron Tempest Test Project 8
-      roles:
-      - user: admin@Default
-        role: cloud_network_admin
+    - name: neutron-tempest9
+      description: Neutron Tempest Test Project 9
+    - name: neutron-tempest10
+      description: Neutron Tempest Test Project 10
     users:
-    - name: neutron-tempestadmin
-      description: Neutron Admin Tempest User
+    - name: neutron-tempestadmin1
+      description: Neutron Tempest Administrator 1
       password: {{ .Values.tempestAdminPassword | quote }}
       roles:
-      - project: neutron-tempest-admin
+      - project: neutron-tempest-admin1
+        role: member
+      - project: neutron-tempest-admin1
         role: admin
-      - project: neutron-tempest-admin
+      - project: neutron-tempest-admin1
         role: network_admin
-      - project: neutron-tempest-admin
+      - project: neutron-tempest-admin1
         role: compute_admin
-      - project: neutron-tempest-admin
+      - project: neutron-tempest-admin1
         role: cloud_network_admin
       - project: neutron-tempest1
         role: member
@@ -647,10 +677,304 @@ spec:
         role: compute_admin
       - project: neutron-tempest8
         role: cloud_network_admin
-      - project: tempest1
-        role: image_viewer
-      - project: tempest2
-        role: image_viewer
+      - project: neutron-tempest9
+        role: member
+      - project: neutron-tempest9
+        role: network_admin
+      - project: neutron-tempest9
+        role: compute_admin
+      - project: neutron-tempest9
+        role: cloud_network_admin
+      - project: neutron-tempest10
+        role: member
+      - project: neutron-tempest10
+        role: network_admin
+      - project: neutron-tempest10
+        role: compute_admin
+      - project: neutron-tempest10
+        role: cloud_network_admin
+    - name: neutron-tempestadmin2
+      description: Neutron Tempest Administrator 2
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest-admin2
+        role: member
+      - project: neutron-tempest-admin2
+        role: admin
+      - project: neutron-tempest-admin2
+        role: network_admin
+      - project: neutron-tempest-admin2
+        role: compute_admin
+      - project: neutron-tempest-admin2
+        role: cloud_network_admin
+      - project: neutron-tempest1
+        role: member
+      - project: neutron-tempest1
+        role: network_admin
+      - project: neutron-tempest1
+        role: compute_admin
+      - project: neutron-tempest1
+        role: cloud_network_admin
+      - project: neutron-tempest2
+        role: member
+      - project: neutron-tempest2
+        role: network_admin
+      - project: neutron-tempest2
+        role: compute_admin
+      - project: neutron-tempest2
+        role: cloud_network_admin
+      - project: neutron-tempest3
+        role: member
+      - project: neutron-tempest3
+        role: network_admin
+      - project: neutron-tempest3
+        role: compute_admin
+      - project: neutron-tempest3
+        role: cloud_network_admin
+      - project: neutron-tempest4
+        role: member
+      - project: neutron-tempest4
+        role: network_admin
+      - project: neutron-tempest4
+        role: compute_admin
+      - project: neutron-tempest4
+        role: cloud_network_admin
+      - project: neutron-tempest5
+        role: member
+      - project: neutron-tempest5
+        role: network_admin
+      - project: neutron-tempest5
+        role: compute_admin
+      - project: neutron-tempest5
+        role: cloud_network_admin
+      - project: neutron-tempest6
+        role: member
+      - project: neutron-tempest6
+        role: network_admin
+      - project: neutron-tempest6
+        role: compute_admin
+      - project: neutron-tempest6
+        role: cloud_network_admin
+      - project: neutron-tempest7
+        role: member
+      - project: neutron-tempest7
+        role: network_admin
+      - project: neutron-tempest7
+        role: compute_admin
+      - project: neutron-tempest7
+        role: cloud_network_admin
+      - project: neutron-tempest8
+        role: member
+      - project: neutron-tempest8
+        role: network_admin
+      - project: neutron-tempest8
+        role: compute_admin
+      - project: neutron-tempest8
+        role: cloud_network_admin
+      - project: neutron-tempest9
+        role: member
+      - project: neutron-tempest9
+        role: network_admin
+      - project: neutron-tempest9
+        role: compute_admin
+      - project: neutron-tempest9
+        role: cloud_network_admin
+      - project: neutron-tempest10
+        role: member
+      - project: neutron-tempest10
+        role: network_admin
+      - project: neutron-tempest10
+        role: compute_admin
+      - project: neutron-tempest10
+        role: cloud_network_admin
+    - name: neutron-tempestadmin3
+      description: Neutron Tempest Administrator 3
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest-admin3
+        role: member
+      - project: neutron-tempest-admin3
+        role: admin
+      - project: neutron-tempest-admin3
+        role: network_admin
+      - project: neutron-tempest-admin3
+        role: compute_admin
+      - project: neutron-tempest-admin3
+        role: cloud_network_admin
+      - project: neutron-tempest1
+        role: member
+      - project: neutron-tempest1
+        role: network_admin
+      - project: neutron-tempest1
+        role: compute_admin
+      - project: neutron-tempest1
+        role: cloud_network_admin
+      - project: neutron-tempest2
+        role: member
+      - project: neutron-tempest2
+        role: network_admin
+      - project: neutron-tempest2
+        role: compute_admin
+      - project: neutron-tempest2
+        role: cloud_network_admin
+      - project: neutron-tempest3
+        role: member
+      - project: neutron-tempest3
+        role: network_admin
+      - project: neutron-tempest3
+        role: compute_admin
+      - project: neutron-tempest3
+        role: cloud_network_admin
+      - project: neutron-tempest4
+        role: member
+      - project: neutron-tempest4
+        role: network_admin
+      - project: neutron-tempest4
+        role: compute_admin
+      - project: neutron-tempest4
+        role: cloud_network_admin
+      - project: neutron-tempest5
+        role: member
+      - project: neutron-tempest5
+        role: network_admin
+      - project: neutron-tempest5
+        role: compute_admin
+      - project: neutron-tempest5
+        role: cloud_network_admin
+      - project: neutron-tempest6
+        role: member
+      - project: neutron-tempest6
+        role: network_admin
+      - project: neutron-tempest6
+        role: compute_admin
+      - project: neutron-tempest6
+        role: cloud_network_admin
+      - project: neutron-tempest7
+        role: member
+      - project: neutron-tempest7
+        role: network_admin
+      - project: neutron-tempest7
+        role: compute_admin
+      - project: neutron-tempest7
+        role: cloud_network_admin
+      - project: neutron-tempest8
+        role: member
+      - project: neutron-tempest8
+        role: network_admin
+      - project: neutron-tempest8
+        role: compute_admin
+      - project: neutron-tempest8
+        role: cloud_network_admin
+      - project: neutron-tempest9
+        role: member
+      - project: neutron-tempest9
+        role: network_admin
+      - project: neutron-tempest9
+        role: compute_admin
+      - project: neutron-tempest9
+        role: cloud_network_admin
+      - project: neutron-tempest10
+        role: member
+      - project: neutron-tempest10
+        role: network_admin
+      - project: neutron-tempest10
+        role: compute_admin
+      - project: neutron-tempest10
+        role: cloud_network_admin
+    - name: neutron-tempestadmin4
+      description: Neutron Tempest Administrator 4
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest-admin4
+        role: member
+      - project: neutron-tempest-admin4
+        role: admin
+      - project: neutron-tempest-admin4
+        role: network_admin
+      - project: neutron-tempest-admin4
+        role: compute_admin
+      - project: neutron-tempest-admin4
+        role: cloud_network_admin
+      - project: neutron-tempest1
+        role: member
+      - project: neutron-tempest1
+        role: network_admin
+      - project: neutron-tempest1
+        role: compute_admin
+      - project: neutron-tempest1
+        role: cloud_network_admin
+      - project: neutron-tempest2
+        role: member
+      - project: neutron-tempest2
+        role: network_admin
+      - project: neutron-tempest2
+        role: compute_admin
+      - project: neutron-tempest2
+        role: cloud_network_admin
+      - project: neutron-tempest3
+        role: member
+      - project: neutron-tempest3
+        role: network_admin
+      - project: neutron-tempest3
+        role: compute_admin
+      - project: neutron-tempest3
+        role: cloud_network_admin
+      - project: neutron-tempest4
+        role: member
+      - project: neutron-tempest4
+        role: network_admin
+      - project: neutron-tempest4
+        role: compute_admin
+      - project: neutron-tempest4
+        role: cloud_network_admin
+      - project: neutron-tempest5
+        role: member
+      - project: neutron-tempest5
+        role: network_admin
+      - project: neutron-tempest5
+        role: compute_admin
+      - project: neutron-tempest5
+        role: cloud_network_admin
+      - project: neutron-tempest6
+        role: member
+      - project: neutron-tempest6
+        role: network_admin
+      - project: neutron-tempest6
+        role: compute_admin
+      - project: neutron-tempest6
+        role: cloud_network_admin
+      - project: neutron-tempest7
+        role: member
+      - project: neutron-tempest7
+        role: network_admin
+      - project: neutron-tempest7
+        role: compute_admin
+      - project: neutron-tempest7
+        role: cloud_network_admin
+      - project: neutron-tempest8
+        role: member
+      - project: neutron-tempest8
+        role: network_admin
+      - project: neutron-tempest8
+        role: compute_admin
+      - project: neutron-tempest8
+        role: cloud_network_admin
+      - project: neutron-tempest9
+        role: member
+      - project: neutron-tempest9
+        role: network_admin
+      - project: neutron-tempest9
+        role: compute_admin
+      - project: neutron-tempest9
+        role: cloud_network_admin
+      - project: neutron-tempest10
+        role: member
+      - project: neutron-tempest10
+        role: network_admin
+      - project: neutron-tempest10
+        role: compute_admin
+      - project: neutron-tempest10
+        role: cloud_network_admin
     - name: neutron-tempestuser1
       description: Neutron Tempest Test User 1
       password: {{ .Values.tempestAdminPassword | quote }}
@@ -746,6 +1070,30 @@ spec:
       - project: neutron-tempest8
         role: compute_admin
       - project: neutron-tempest8
+        role: member
+    - name: neutron-tempestuser9
+      description: Neutron Tempest Test User 9
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest9
+        role: admin
+      - project: neutron-tempest9
+        role: network_admin
+      - project: neutron-tempest9
+        role: compute_admin
+      - project: neutron-tempest9
+        role: member
+    - name: neutron-tempestuser10
+      description: Neutron Tempest Test User 10
+      password: {{ .Values.tempestAdminPassword | quote }}
+      roles:
+      - project: neutron-tempest10
+        role: admin
+      - project: neutron-tempest10
+        role: network_admin
+      - project: neutron-tempest10
+        role: compute_admin
+      - project: neutron-tempest10
         role: member
 {{- end }}
 {{- end }}
