--- a/openstack/swift/templates/memcached-service.yaml
+++ b/openstack/swift/templates/memcached-service.yaml
@@ -1,18 +1,21 @@
+{{- range $index, $memcached := .Values.memcached_servers }}
 kind: Service
 apiVersion: v1
 
 metadata:
-  name: memcached
+  name: {{ $memcached }}
   labels:
-    release: "{{.Release.Name}}"
+    release: "{{ $.Release.Name }}"
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9150"
 
 spec:
   selector:
-    name: memcached
+    name: {{ $memcached }}
   ports:
   - name: memcached
     port: 11211
     targetPort: memcached
+---
+{{end}}
