[keystone] adjusted some default resource figures

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -112,11 +112,11 @@ api:
 
     resources:
       enabled: false
-      limits:
-        memory: 128Mi
-        cpu: 500m
       requests:
-        memory: 128Mi
+        memory: 40Mi
+        cpu: 500m
+      limits:
+        memory: 64Mi
         cpu: 500m
 
   terminationGracePeriodSeconds: 30
@@ -126,11 +126,11 @@ api:
     enabled: false
 
     requests:
-      memory: "128Mi"
-      cpu: "100m"
+      memory: 1433Mi
+      cpu: 400m
     limits:
-      memory: "1024Mi"
-      cpu: "2000m"
+      memory: 2Gi
+      cpu: 2000m
 
   replicas: 3
 
@@ -156,11 +156,11 @@ cron:
     enabled: false
 
     requests:
-      memory: "128Mi"
-      cpu: "100m"
+      memory: 1433Mi
+      cpu: 400m
     limits:
-      memory: "1024Mi"
-      cpu: "2000m"
+      memory: 2Gi
+      cpu: 2000m
 
   upgrades:
     revisionHistory: 3
@@ -224,6 +224,16 @@ rabbitmq:
     admin:
       password: DEFINE-IN-REGION-VALUES
 
+  resources:
+    enabled: false
+
+    requests:
+      memory: 512Mi
+      cpu: 500m
+    limits:
+      memory: 768Mi
+      cpu: 1000m
+
   metrics:
     enabled: true
     password: DEFINE-IN-REGION-VALUES
@@ -242,6 +252,16 @@ postgresql:
   backup:
     enabled: false
     imageTag: v0.5.15
+
+  resources:
+    enabled: false
+
+    requests:
+      memory: 256Mi
+      cpu: 500m
+    limits:
+      memory: 512Mi
+      cpu: 1000m
 
 pgmetrics:
   db_name: keystone
