update cloudprober configmap

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -11,12 +11,12 @@ metadata:
 
 data:
   cloudprober.cfg: |
-    {{ range .Values.ping_targets }}
+    {{ range $i, $config := .Values.ping_targets -}}
     probe {
       type: PING
-      name: "ping-probe-{{ . }}"
+      name: "probe-{{ $config.name }}"
       targets {
-        host_names: "{{ . }}"
+        host_names: "{{ $config.name }}"
       }
       ping_probe {
         use_datagram_socket: false
