update cloudprober configmap

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -16,7 +16,7 @@ data:
       type: PING
       name: "probe-{{ $config.name }}"
       targets {
-        host_names: "{{ $config.name }}"
+        host_names: "{{ $config.target }}"
       }
       ping_probe {
         use_datagram_socket: false
