[keystone] more resources to configure

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -319,6 +319,17 @@ pgmetrics:
             usage: "GAUGE"
             description: "Total keystone role-assignment count per role"
 
+memcached:
+  resources:
+    enabled: false
+
+    requests:
+      memory: 2252Mi
+      cpu: 50m
+    limits:
+      memory: 2560Mi
+      cpu: 100m
+
 rbac:
   enabled: false
 
