--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       volumes:
         - name: cloudprober-config
           configMap:
-            name: cloudprober-config
+            name: cloudprober-exporter
       containers:
         - name: cloudprober
           image: cloudprober/cloudprober
