fix typo in cloudprober.cfg

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -24,7 +24,7 @@ data:
       interval_msec: 15000  # 15s
       timeout_msec: 1000   # 1s
     }
-    {{ end }}
+    {{ end -}}
     {{ range $i, $config := .Values.http_targets -}}
     probe {
       type: HTTP
@@ -38,6 +38,6 @@ data:
       interval_msec: 15000  # 15s
       timeout_msec: 1000   # 1s
     }
-    {{ end }}
+    {{ end -}}
 
 {{ end -}}
