checksum cloudprober configmap has changed

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -19,6 +19,8 @@ spec:
       labels:
         name: cloudprober-exporter-{{$config.name}}
         app: cloudprober-exporter
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
     spec:
       nodeSelector:
         failure-domain.beta.kubernetes.io/zone: {{$config.name}}
