[keystone] rabbitmq needs more resources on startup - increased the limit upper value for the peak

--- a/common/rabbitmq/values.yaml
+++ b/common/rabbitmq/values.yaml
@@ -36,12 +36,13 @@ persistence:
 
 resources:
   enabled: false
-  limits:
-    memory: 128Mi
-    cpu: 500m
+
   requests:
-    memory: 128Mi
+    memory: 512Mi
     cpu: 500m
+  limits:
+    memory: 2Gi
+    cpu: 1000m
 
 metrics:
   enabled: true
