--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -231,12 +231,13 @@ rabbitmq:
       memory: 512Mi
       cpu: 500m
     limits:
-      memory: 768Mi
+      memory: 2Gi
       cpu: 1000m
 
   metrics:
     enabled: true
     password: DEFINE-IN-REGION-VALUES
+
 
 postgresql:
   postgresDatabase: keystone
