fix checksum check

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -11,7 +11,7 @@ metadata:
 
 data:
   cloudprober.cfg: |
-    {{ range $i, $config := .Values.ping_targets -}}
+    {{- range $i, $config := .Values.ping_targets }}
     probe {
       type: PING
       name: "probe-ping-{{ $config.name }}"
@@ -24,8 +24,8 @@ data:
       interval_msec: 15000  # 15s
       timeout_msec: 1000   # 1s
     }
-    {{ end -}}
-    {{ range $i, $config := .Values.http_targets -}}
+    {{- end }}
+    {{- range $i, $config := .Values.http_targets }}
     probe {
       type: HTTP
       name: "probe-http-{{ $config.name }}"
@@ -38,6 +38,6 @@ data:
       interval_msec: 15000  # 15s
       timeout_msec: 1000   # 1s
     }
-    {{ end -}}
+    {{- end }}
 
-{{ end -}}
+  {{ end -}}
