--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         name: cloudprober-exporter-{{$config.name}}
         app: cloudprober-exporter
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") $ | sha256sum }}
     spec:
       nodeSelector:
         failure-domain.beta.kubernetes.io/zone: {{$config.name}}
