fix port in cloudprober configmap

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -33,7 +33,7 @@ data:
         host_names: "{{ $config.target }}"
       }
       http_probe {
-        port = {{ $config.port }}
+        port: {{ $config.port }}
       }
       interval_msec: 15000  # 15s
       timeout_msec: 1000   # 1s
