--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           configMap:
             name: cloudprober-exporter
       containers:
-        - name: cloudprober
+        - name: prober
           image: cloudprober/cloudprober
           imagePullPolicy: IfNotPresent
           args: [
