consider cloudprober metrics in prom-frontend

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -178,6 +178,9 @@ data:
           - '{__name__=~"^webhook_.+"}'
           - '{__name__=~"^admission|daemonset|deployment|disruption|endpoint|job|namespace|petset|replicaset|serviceaccount.+"}'
           - '{__name__=~"^ns_exporter.+"}'
+          - '{__name__=~"^total"}'
+          - '{__name__=~"^success"}'
+          - '{__name__=~"^latency"}'
           - '{job="dns-sd"}'
 
       relabel_configs:
