[netapp] Fix names and add resource limit

--- a/openstack/netapp/templates/app-exporter.yaml
+++ b/openstack/netapp/templates/app-exporter.yaml
@@ -34,3 +34,7 @@ spec:
         image: {{ .Values.exporter.image }}
         ports:
         - containerPort: 9108
+        resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
