--- a/openstack/netapp/templates/app-graphite.yaml
+++ b/openstack/netapp/templates/app-graphite.yaml
@@ -39,7 +39,7 @@ spec:
       volumes:
       - name: netapp-harvest-conf
         configMap:
-          name: netapp-harvest-conf
+          name: netapp-etc
       - name: pv-storage
         persistentVolumeClaim:
           claimName: {{ .Values.graphite.name }}
@@ -72,8 +72,8 @@ spec:
             subPath: carbon.conf
             mountPath: /opt/graphite/conf/carbon.conf
         resources:
-          limits:
+          requests:
             memory: "512Mi"
-            cpu: "1000m"
+            cpu: "600m"
 
 
