--- a/openstack/netapp/values.yaml
+++ b/openstack/netapp/values.yaml
@@ -1,17 +1,19 @@
 global:
-    dummy: 1
+  netapp_filer:
+      username: dummyuser
+      password: dummypass
 
 harvest:
-    name: netapp-harvest
-    - image:
-        harvest: mx3d/netapp-harvest:v1.05
-        duplicator: mx3d/gotee:v0.2
-        exporter: prom/graphite-exporter
+  name: netapp-harvest
+  image:
+    harvest: mx3d/netapp-harvest:v1.05
+    duplicator: mx3d/gotee:v0.2
+    exporter: prom/graphite-exporter
 
 graphite:
-    name: netapp-graphite
-    image: hopsoft/graphite-statsd
+  name: netapp-graphite
+  image: hopsoft/graphite-statsd
 
 exporter:
-    name: netapp-exporter
-    image: mx3d/netapp_exporter:v0.1
+  name: netapp-exporter
+  image: mx3d/netapp_exporter:v0.1
