[swift] option to run companion pods on storage nodes

--- a/openstack/swift/templates/memcached-deployment.yaml
+++ b/openstack/swift/templates/memcached-deployment.yaml
@@ -22,6 +22,11 @@ spec:
       labels:
         name: {{ $memcached }}
     spec:
+      {{- if $.Values.companions_run_on_storages }}
+      {{- include "swift_daemonset_tolerations" $ | indent 6 }}
+      nodeSelector:
+        species: {{ $.Values.species }}
+      {{- end }}
       containers:
         - name: memcached
           image: memcached:{{ $.Values.image_version_auxiliary_memcached }}
