--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -43,6 +43,9 @@ health_statsd: true
 # Enable prometheus probing
 probing: true
 
+# Pods like memcached or the object expirer are scheduled to storage nodes
+companions_run_on_storages: false
+
 # Object Server Configurations
 object_expirer_concurrency: 5
 object_replicator_concurrency: 2
