--- a/system/kube-monitoring/charts/event-exporter/templates/clusterrole.yaml
+++ b/system/kube-monitoring/charts/event-exporter/templates/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -9,3 +10,4 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get"]
+{{- end }}
