--- a/system/kube-monitoring/charts/event-exporter/templates/clusterrolebinding.yaml
+++ b/system/kube-monitoring/charts/event-exporter/templates/clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -10,3 +11,4 @@ subjects:
 - kind: ServiceAccount
   name: {{ template "name" . }}
   namespace: {{ .Release.Namespace }}
+{{- end }}
