added liveness check for all neutron agents

--- a/openstack/neutron/templates/daemonset-network_agents.yaml
+++ b/openstack/neutron/templates/daemonset-network_agents.yaml
@@ -65,7 +65,7 @@ spec:
             - mountPath: /container.init
               name: container-init
         - name: neutron-ovs-agent
-{{ tuple . "neutron-ovs-agent" | include "helm-toolkit.snippets.network_container_agent" | indent 10 }}
+{{ tuple . "neutron-openvswitch-agent" | include "helm-toolkit.snippets.network_container_agent" | indent 10 }}
           volumeMounts:
             - mountPath: /var/run
               name: run
