--- a/openstack/neutron/templates/deployment-aci-agent.yaml
+++ b/openstack/neutron/templates/deployment-aci-agent.yaml
@@ -34,6 +34,12 @@ spec:
           imagePullPolicy: IfNotPresent
           command:
             - /container.init/neutron-aci-agent-start
+          livenessProbe:
+            exec:
+              command: ["openstack-agent-liveness", "--component", "neutron", "--config-file", "/etc/neutron/neutron.conf"]
+            initialDelaySeconds: 30
+            periodSeconds: 30
+            timeoutSeconds: 10
           env:
             - name: DEBUG_CONTAINER
               value: "false"
