--- a/openstack/keystone/templates/deployment-cron.yaml
+++ b/openstack/keystone/templates/deployment-cron.yaml
@@ -90,14 +90,9 @@ spec:
             - name: credential-keys
               mountPath: /credential-keys
               readOnly: true
-          {{- if .Values.cron.resources.enabled }}
+          {{- if .Values.cron.resources }}
           resources:
-            limits:
-              cpu: {{ .Values.cron.resources.limits.cpu | quote }}
-              memory: {{ .Values.cron.resources.limits.memory | quote }}
-            requests:
-              cpu: {{ .Values.cron.resources.requests.cpu | quote }}
-              memory: {{ .Values.cron.resources.requests.memory | quote }}
+{{ toYaml .Values.cron.resources | indent 12 }}
           {{- end }}
       volumes:
         - name: keystone-etc
