--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -64,11 +64,13 @@ api:
   fernet:
     maxActiveKeys: 3
     secrets:
-      0: DEFINE-IN-REGION-VALUES
+      0: c1dVSlFZVjRQRnBGR3pwSk1nMll6eEFwX2VDNURwRFVzLVd5aEVYaVI1dz0=
+      1: M1V0dHp6bk5LYzVlQ1doMjdvUUctSGdmVFFEcWxIeDZXdHFDT25vT3RHUT0=
 
   credentials:
     secrets:
-      0: DEFINE-IN-REGION-VALUES
+      0: RUdXZU5oVFR1TUU3TkFqazJrZWpqSE5vZ0lqeHFMTTljeUZxb2dZakNQZz0=
+      1: OUhUQnBzTDBLTkFfTnhqZlFWX0dmc0tlc2FnUUZYTFBrN2hpWldpQmN6cz0=
 
   auth:
   # Allowed authentication methods. (list value)
@@ -110,27 +112,25 @@ api:
     imageTag: v0.8.1
     prefix: openstack
 
-    resources:
-      enabled: false
-      requests:
-        memory: 40Mi
-        cpu: 500m
-      limits:
-        memory: 64Mi
-        cpu: 500m
+#    resources:
+#      enabled: false
+#      requests:
+#        memory: 40Mi
+#        cpu: 100m
+#      limits:
+#        memory: 64Mi
+#        cpu: 500m
 
   terminationGracePeriodSeconds: 30
   minReadySeconds: 5
 
-  resources:
-    enabled: false
-
-    requests:
-      memory: 1433Mi
-      cpu: 400m
-    limits:
-      memory: 2Gi
-      cpu: 2000m
+#  resources:
+#    requests:
+#      memory: 1433Mi
+#      cpu: 1000m
+#    limits:
+#      memory: 2Gi
+#      cpu: 2000m
 
   replicas: 3
 
@@ -152,15 +152,13 @@ cron:
 
   replicas: 1
 
-  resources:
-    enabled: false
-
-    requests:
-      memory: 1433Mi
-      cpu: 400m
-    limits:
-      memory: 2Gi
-      cpu: 2000m
+#  resources:
+#    requests:
+#      memory: 1433Mi
+#      cpu: 400m
+#    limits:
+#      memory: 2Gi
+#      cpu: 2000m
 
   upgrades:
     revisionHistory: 3
@@ -224,15 +222,13 @@ rabbitmq:
     admin:
       password: DEFINE-IN-REGION-VALUES
 
-  resources:
-    enabled: false
-
-    requests:
-      memory: 512Mi
-      cpu: 500m
-    limits:
-      memory: 2Gi
-      cpu: 1000m
+#  resources:
+#    requests:
+#      memory: 512Mi
+#      cpu: 500m
+#    limits:
+#      memory: 2Gi
+#      cpu: 1000m
 
   metrics:
     enabled: true
@@ -254,18 +250,21 @@ postgresql:
     enabled: false
     imageTag: v0.5.15
 
-  resources:
-    enabled: false
-
-    requests:
-      memory: 256Mi
-      cpu: 500m
-    limits:
-      memory: 512Mi
-      cpu: 1000m
+#  resources:
+#    requests:
+#      memory: 256Mi
+#      cpu: 500m
+#    limits:
+#      memory: 512Mi
+#      cpu: 1000m
 
 pgmetrics:
   db_name: keystone
+
+#  resources:
+#    requests:
+#      memory: 25Mi
+#      cpu: 500m
 
   customMetrics:
     openstack_roles_total:
@@ -320,16 +319,14 @@ pgmetrics:
             usage: "GAUGE"
             description: "Total keystone role-assignment count per role"
 
-memcached:
-  resources:
-    enabled: false
-
-    requests:
-      memory: 2252Mi
-      cpu: 50m
-    limits:
-      memory: 2560Mi
-      cpu: 100m
+#memcached:
+#  resources:
+#    requests:
+#      memory: 2252Mi
+#      cpu: 50m
+#    limits:
+#      memory: 2560Mi
+#      cpu: 100m
 
 rbac:
   enabled: false
