--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -119,6 +119,7 @@ data:
           - '{__name__=~"^ingress_.+"}'
           - '{__name__=~"^ipmi_.+"}'
           - '{__name__=~"^keystone_.+"}'
+          - '{__name__=~"^klog_.+"}'
           - '{__name__=~"^kube_.+"}'
           - '{__name__=~"^kubelet_.+"}'
           - '{__name__=~"^limes_.+"}'
