[neutron] added fallback ovs startup script

--- a/openstack/neutron/templates/configmap-bin.yaml
+++ b/openstack/neutron/templates/configmap-bin.yaml
@@ -15,6 +15,8 @@ data:
 {{ include (print .Template.BasePath "/bin/_neutron-metadata-agent-start.tpl") . | indent 4 }}
   neutron-openvswitch-agent-start: |
 {{ include (print .Template.BasePath "/bin/_neutron-openvswitch-agent-start.tpl") . | indent 4 }}
+  neutron-ovs-agent-start: |
+{{ include (print .Template.BasePath "/bin/_neutron-openvswitch-agent-start.tpl") . | indent 4 }}
   neutron-ovs-db-start: |
 {{ include (print .Template.BasePath "/bin/_neutron-ovs-db-start.tpl") . | indent 4 }}
   neutron-ovs-start: |
