--- a/system/kube-monitoring/charts/event-exporter/values.yaml
+++ b/system/kube-monitoring/charts/event-exporter/values.yaml
@@ -33,10 +33,10 @@ metrics:
         - key: InvolvedObject.Kind
           expr: Pod
         - key: Message
-          expr: No nodes are available that match all of the predicates: .*Insufficient cpu.*
+          expr: ".*Insufficient cpu.*"
         labels:
           namespace: InvolvedObject.Namespace
-          pod_name: InvolvedObject.Name          
+          pod_name: InvolvedObject.Name
       - name: kube_pod_failed_scheduling_memory_total
         event_matcher:
         - key: Reason
@@ -44,10 +44,10 @@ metrics:
         - key: InvolvedObject.Kind
           expr: Pod
         - key: Message
-          expr: No nodes are available that match all of the predicates: .*Insufficient memory.*
+          expr: ".*Insufficient memory.*"
         labels:
           namespace: InvolvedObject.Namespace
-          pod_name: InvolvedObject.Name       
-          
+          pod_name: InvolvedObject.Name
+
 rbac:
   create: false
