[manila] add pre-upgrade job to check that provided region matches
- relies on kubernetes node name ending with <region>.<tld>
- should prevent accidental deployments of wrong region values

--- a/openstack/manila/templates/bin-configmap.yaml
+++ b/openstack/manila/templates/bin-configmap.yaml
@@ -16,3 +16,7 @@ data:
 {{ .Files.Get "bin/manila-tempest-start" | indent 4 }}
   manila-unit-start: |
 {{ .Files.Get "bin/manila-unit-start" | indent 4 }}
+  region-check.py: |
+{{ .Files.Get "bin/region-check.py" | indent 4 }}
+  run-region-check: |
+{{ .Files.Get "bin/run-region-check" | indent 4 }}
