[keystone] fix for https://github.com/kubernetes/kubernetes/issues/47264 ?

--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -35,6 +35,8 @@ spec:
         chart-version: {{.Chart.Version}}
         configmap-etc-hash: {{ include (print $.Template.BasePath "/configmap-etc.yaml") . | sha256sum }}
         configmap-bin-hash: {{ include (print $.Template.BasePath "/configmap-bin.yaml") . | sha256sum }}
+        pod.beta.kubernetes.io/init-containers: null
+        pod.alpha.kubernetes.io/init-containers: null
     spec:
 {{- if .Values.rbac.enabled }}
       serviceAccountName: keystone
