[manila] initially disabled region_check
configmap needs to be deployed first

--- a/openstack/manila/templates/region-check-job.yaml
+++ b/openstack/manila/templates/region-check-job.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.region_check.enabled }}
+{{- if .Release.IsUpgrade }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -33,3 +35,5 @@ spec:
           configMap:
             name: manila-bin
             defaultMode: 0755
+{{- end }}
+{{- end }}
