--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -16,6 +16,8 @@ global:
 
 api_port_internal: '8786'
 debug: "True"
+region_check:
+  enabled: false
 # below is required input in values
 # imageVersionManilaApi: DEFINED-IN-REGION-CHART
 
