keystone rate limit

--- a/openstack/keystone/requirements.yaml
+++ b/openstack/keystone/requirements.yaml
@@ -2,6 +2,10 @@ dependencies:
   - name: memcached
     repository: file://../../common/memcached
     version: 0.0.1
+  - name: memcached
+    alias: memcached-ratelimit
+    repository: file://../../common/memcached
+    version: 0.0.1
   - name: rabbitmq
     repository: file://../../common/rabbitmq
     version: 0.1.0
