--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -337,6 +337,15 @@ rbac:
 watcher:
   enabled: true
 
+sapcc_ratelimit:
+  # will enable the rate limit middleware and a dedicated memcache for rate limits
+  enabled: false
+  # choose memcache (default) or redis
+  backend: memcache
+  memcached:
+    host: DEFINED-IN-SECRETS
+    port: 11211
+
 lifesaver:
   enabled: true
 
